update swagger to make decisions not mandatory and add created_at field (#263)
